[package]
name = "strung"
version = "0.1.0"
edition = "2021"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Easy access of struct fields in strings using different/custom pre/postfix: \"Hello, {field}\""
repository = "https://github.com/dekirisu/strung/"
keywords = ["string","struct","format","fmt","replace"]
categories = ["value-formatting","rust-patterns"]
documentation = "https://docs.rs/strung"

[dependencies]
strung_derive = {version="0.1.0", optional=true}

[patch.crates-io]
strung_derive = {path="./derive"}

[features]
default = ["dep:strung_derive"]