[package]
name = "strung"
version = "0.1.3"
edition = "2021"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Easy access of struct fields in strings using different/custom pre/postfix: \"Hello, {field}\""
repository = "https://github.com/dekirisu/strung/"
keywords = ["string","struct","format","fmt","replace"]
categories = ["value-formatting","rust-patterns"]
documentation = "https://docs.rs/strung"

[dependencies]
strung_derive = {version="0.1.3", optional=true}

[patch.crates-io]
strung_derive = {path="./derive"}

[features]
default = ["dep:strung_derive"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false